--- a/android/src/main/res/layout/activity_call_incoming.xml
+++ b/android/src/main/res/layout/activity_call_incoming.xml
@@ -1,77 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/incoming_voice_call">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:gravity="center_horizontal"
-    >
-
-        <RelativeLayout
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-        >
-            <ImageView
-                android:id="@+id/ivAvatar"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_avatar_default"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-            />
-
-            <ImageView
-                android:id="@+id/ivRing1"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_ring"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-            />
-
-            <ImageView
-                android:id="@+id/ivRing2"
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_ring"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-            />
-        </RelativeLayout>
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="22sp"
-            android:fontFamily="sans-serif"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/ubunturegular"
             android:textColor="#FFFFFF"
-        />
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/tvInfo"
+            android:id="@+id/callType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
-            android:fontFamily="sans-serif"
-            android:textColor="#ADADAD"
-        />
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/ubunturegular"
+            android:textColor="#FFFFFF"
+            android:text="Incoming Voice Call"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/companyName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/ubunturegular"
+            android:textColor="#FFFFFF"
+            android:text="Vinix"
+            android:textSize="16sp" />
+
+        <RelativeLayout
+            android:layout_width="265dp"
+            android:layout_height="265dp">
+
+            <ImageView
+                android:id="@+id/ivRing1"
+                android:layout_width="265dp"
+                android:layout_height="265dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_ring" />
+
+            <ImageView
+                android:id="@+id/ivAvatar"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -100,17 +94,7 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_decline_call"
             />
-            <TextView
-                android:id="@+id/tvDecline"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:textSize="14sp"
-                android:fontFamily="sans-serif"
-                android:textColor="#ADADAD"
-                android:text="@string/decline"
-                android:gravity="center"
-            />
+
         </LinearLayout>
 
         <LinearLayout
@@ -128,17 +112,7 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_accept_call"
             />
-            <TextView
-                android:id="@+id/tvAccept"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:textSize="14sp"
-                android:fontFamily="sans-serif"
-                android:textColor="#ADADAD"
-                android:text="@string/accept"
-                android:gravity="center"
-            />
+
         </LinearLayout>
 
     </LinearLayout>
