--- a/android/src/main/res/layout/activity_call_incoming.xml
+++ b/android/src/main/res/layout/activity_call_incoming.xml
@@ -67,6 +67,16 @@
 
         </RelativeLayout>
 
+         <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/ubunturegular"
+            android:textColor="#ADADAD"
+        />
+
     </LinearLayout>
 
     <LinearLayout
