--- a/android/src/main/res/layout/activity_call_incoming.xml
+++ b/android/src/main/res/layout/activity_call_incoming.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/incoming_voice_call">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/ubunturegular"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/ubunturegular"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:text="Incoming Voice Call"
             android:textSize="16sp" />
 
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/ubunturegular"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
         <RelativeLayout
@@ -73,21 +73,19 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-    >
+        android:layout_marginBottom="9dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="60dp"
             android:layout_marginEnd="140dp"
-        >
+            android:layout_marginBottom="60dp"
+            android:orientation="vertical">
 
             <com.incomingcall.AnimateImage
                 android:id="@+id/ivDeclineCall"
@@ -101,11 +99,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginBottom="60dp"
-        >
+            android:orientation="vertical">
 
             <com.incomingcall.AnimateImage
                 android:id="@+id/ivAcceptCall"
